fix collapse menu on mobile again, change the black color of input text to white

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-/* Génréal */
+/* General */
 
 body{
 	background-color: #262626;
@@ -30,6 +30,10 @@ a{
 }
 
 label{
+	color: whitesmoke;
+}
+
+input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea{
 	color: whitesmoke;
 }
 
